--- a/finalProjectCluster.Rmd
+++ b/finalProjectCluster.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final Project"
-author: "Dr. J"
-date: "11/15/2019"
+author: "Luis Hernandez"
+date: "11/22/2019"
 output: 
   html_document:
   toc: true
@@ -18,7 +18,7 @@ library(tidyverse)
 ```
 
 # Unsupervised learning: cluster analysis
-problem statiement: given a database of just over 400,000 transactions, each labeled as 'ok', 'fraud', or 'unk' use a machine learning technique to identify 50 or so transactions that *may* by fraudulent
+problem statiement: given a database of just over 400,000 transactions, each labeled as 'ok', 'fraud', or 'unkn' use a machine learning technique to identify 50 or so transactions that *may* by fraudulent
 
 ```{r dataSets, echo=FALSE, include=FALSE}
 data() # to see all the data sets available
@@ -33,7 +33,6 @@ salesDF = na.omit(sales)
 salesDF$perItem = salesDF$Val/salesDF$Quant
 salesDF$Quant = as.numeric(salesDF$Quant)
 salesDF$Val = as.numeric(salesDF$Val)
-
 head(salesDF)
 ```
 
@@ -57,11 +56,12 @@ The purpose of the study is to Use cluser analysis to identify the top 50 'unkn'
 ## Construct data set with 'known' transactions
 This all transactions that are known to be either 'ok' or 'fraud,' look at the data
 
+Make a data frame that has only fraud and ok transactions, use this data frame to cluster, find clusters that contain only fraud or ok transactions.
+
 ```{r}
 fraudData = filter(salesDF, Insp=='fraud')
 okData = filter(salesDF, Insp == 'ok')
 fraud_ok = rbind(fraudData, okData)
-
 ```
 
 ### boxplots
@@ -86,21 +86,15 @@ The above boxplot shows that both the fraud and ok transactions have about the s
 By the the 'per-item' quantity
 
 ```{r}
-
 boxplot(log10(fraudData$perItem), log10(okData$perItem), names=names, horizontal = TRUE, main='Transaction Values\nitem price', xlab = 'log price per item')
 grid()
-
-
 ```
 
 as may be expected the variability on fraudlent transactions is greater than that of the legit transactions
 
 ```{r}
-
 boxplot(log10(fraudData$Quant), log10(okData$Quant), names=names, horizontal = TRUE, main='Quantity of transactions', xlab = 'log number of transactions')
 grid()
-
-
 ```
 
 boxplot shows little difference between the 'ok' and 'fraud' transactions.  Larger orders could represent more of the fraudulent kind?
@@ -115,7 +109,6 @@ fraud_okLog$Val = log10(fraud_ok$Val)
 fraud_okLog$perItem = log10(fraud_ok$perItem)
 dfLog = fraud_okLog[,c(3,4,6)]
 dfScaled = scale(fraud_ok[,c(3,4,6)])
-
 ```
 
 
@@ -123,7 +116,7 @@ dfScaled = scale(fraud_ok[,c(3,4,6)])
 Multiple clusters...
 
 ```{r}
-k2 =kmeans(dfScaled, centers=3, nstart=25)
+k2= kmeans(dfScaled, centers=3, nstart=25)
 k3= kmeans(dfScaled, centers=4, nstart=25)
 k4= kmeans(dfScaled, centers=5, nstart=25)
 k5= kmeans(dfScaled, centers=6, nstart=25)
@@ -136,7 +129,6 @@ p1 = fviz_cluster(k2, geom='point', data =dfScaled) + ggtitle('k=3')
 p2 = fviz_cluster(k3, geom='point', data =dfScaled) + ggtitle('k=4')
 p3 = fviz_cluster(k4, geom='point', data =dfScaled) + ggtitle('k=5')
 p4 = fviz_cluster(k5, geom='point', data =dfScaled) + ggtitle('k=6')
-
 library(gridExtra)
 grid.arrange(p1, p2, p3, p4, nrow=2)
 ```
@@ -148,15 +140,12 @@ look at the within cluster variability.
 was = function(k) {
   kmeans(dfScaled, centers=k, nstart=25)$tot.withinss 
 }
-
 # compute and plot for k=1 to k=10
 k.values=2:10
-
 # extract was for 2-10 clusters
 was.values = map_dbl(k.values, was)
 print('silhouette values: ')
 for (i in 2:10) print(paste(i," ", was.values[i]," ", was.values[i]/was.values[1]*100,"%"))
-
 plot(k.values, was.values, type='b', pch=19, frame=FALSE, 
      xlab = 'number of clusters', ylab='total within-clusters SS')
 grid()
@@ -177,7 +166,6 @@ fviz_cluster(final, geom='point', data = dfScaled) + ggtitle('optimum clusters')
 ```{r echo = FALSE}
 clusterCenterSave = matrix(data=0, nrow=2, ncol=3)
 k=1
-
 nObs = length(dfScaled[,1])
 for (i in unique(final$cluster)){
   print(paste('Cluster ',i))
@@ -196,7 +184,6 @@ for (i in unique(final$cluster)){
   
   print('-------')
 }
-
 ```
 
 User centers of the 'all fraud' clusters to find transactions near these 
@@ -212,7 +199,6 @@ print('------------------------')
 print('highest price items')
 print('Person ID    item price    transaction')
 for (i in 1:20) print(paste(fraud_okLog$ID[sortIndexV$ix][i],"   ",round(10^(fraud_okLog$perItem[sortIndexV$ix[i]]),4), "       ", fraud_okLog$Insp[sortIndexV$ix[i]]))
-
 ```
 
 ## Find possible fraudlent transactions
@@ -229,25 +215,26 @@ find distances to 'fraud' clusters
 
 ```{r}
 saveTrans = matrix(data=0, nrow=nUnkn, ncol=2)
+scaledUnknown = data.frame(scale(unkDataFrame[,c(3,4,6)]))
 for(i in 1:nUnkn) {
-  delta1 = c(as.numeric(unkDataFrame[i,c(3,4,6)])-as.numeric(clusterCenterSave[1,]))
-  delta1 = sqrt(sum(delta1))
-  delta2 = c(as.numeric(unkDataFrame[i,c(3,4,6)])-as.numeric(clusterCenterSave[2,]))
-  delta2 = sqrt(sum(delta1))
+  
+  delta1 = c(as.numeric(scaledUnknown[i,])-as.numeric(clusterCenterSave[1,]))
+  delta1 = sqrt(sum(delta1^2))
+  
+  delta2 = c(as.numeric(scaledUnknown[i,])-as.numeric(clusterCenterSave[2,]))
+  delta2 = sqrt(sum(delta2^2))
+  
 saveTrans[i,]=c(i, min(delta1, delta2))
-
 }
-hist(saveTrans[,2],xlim=c(0,20), main="dist to fraud", xlab='dist', freq=FALSE)
-
 ```
 
 find the 50 smallest distances
 
 ```{r}
-sortSaveTrans = sort(saveTrans[,1], index.return=TRUE)
-
+sortSaveTrans = sort(saveTrans[,2], index.return=TRUE)
 print(unkDataFrame[sortSaveTrans$ix[1:50],])
 print(unique(unkDataFrame[sortSaveTrans$ix[1:50],]$ID))
-
 ```
-
+```{r}
+hist(saveTrans[sortSaveTrans$ix[1:50],2], main="dist to fraud", xlab='dist', freq=FALSE)
+```
